// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharityPreview renders horizontally 1`] = `
<div
  className="charity-preview horizontal"
>
  <div
    className="image-container"
  >
    <Image
      as="img"
      src="http://via.placeholder.com/210x118"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span>
        05:22
      </span>
    </div>
  </div>
  <div
    className="charity-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      Video title
    </div>
    <div
      className="charity-preview-metadata-container"
    >
      <div
        className="charity-title"
      >
        Charity name
      </div>
      <div>
        <span>
          November 2, 2020
        </span>
        <p>
          Short description
        </p>
      </div>
    </div>
    <Button
      as="button"
      className="mini compact ui orange basic smaller"
    >
      <i
        className="heart outline icon"
      />
      Donate
    </Button>
    <a
      className="charity-preview-link"
      href="www.google.ca"
    >
      <i
        className="star outline icon"
      />
      Follow
    </a>
    <a
      className="charity-preview-link"
      href="www.google.ca"
    >
      <i
        className="share icon"
      />
      Share
    </a>
  </div>
</div>
`;

exports[`CharityPreview renders vertically 1`] = `
<div
  className="charity-preview "
>
  <div
    className="image-container"
  >
    <Image
      as="img"
      src="http://via.placeholder.com/210x118"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span>
        05:22
      </span>
    </div>
  </div>
  <div
    className="charity-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      Video title
    </div>
    <div
      className="charity-preview-metadata-container"
    >
      <div
        className="charity-title"
      >
        Charity name
      </div>
      <div>
        <span>
          November 2, 2020
        </span>
        <p>
          Short description
        </p>
      </div>
    </div>
    <Button
      as="button"
      className="mini compact ui orange basic smaller"
    >
      <i
        className="heart outline icon"
      />
      Donate
    </Button>
    <a
      className="charity-preview-link"
      href="www.google.ca"
    >
      <i
        className="star outline icon"
      />
      Follow
    </a>
    <a
      className="charity-preview-link"
      href="www.google.ca"
    >
      <i
        className="share icon"
      />
      Share
    </a>
  </div>
</div>
`;
